<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_data_dialog"
        android:textSize="32sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f1f1f1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_promt_dialog"
            android:textColor="#000000"
            android:textSize="24sp" />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint_dialog"
            android:id="@+id/editDateText"
            android:inputType="date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_promt_dialog"
            android:textColor="#000000"
            android:textSize="24sp" />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/weight_hint_dialog"
            android:inputType="number"
            android:id="@+id/editWeightText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fat_promt_dialog"
            android:textColor="#000000"
            android:textSize="24sp" />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/fat_hint_dialog"
            android:inputType="number"
            android:id="@+id/editFatText"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f1f1f1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:text="@string/confirm_dialog"
        android:id="@+id/dialogConfirm"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"/>



</LinearLayout>