<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rootItem"
    android:background="#e2e2e2">

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp"
        android:textColor="#000000"
        android:id="@+id/nameFieldHeader"
        android:maxLength="4"
        android:ellipsize="end"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/breed"
        android:textSize="24sp"
        android:textColor="#000000"
        android:id="@+id/breedFieldHeader"
        android:maxLength="7"
        android:ellipsize="end"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:layout_toRightOf="@id/nameFieldHeader"/>


    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textSize="24sp"
        android:textColor="#000000"
        android:id="@+id/colorFieldHeader"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLength="6"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_toLeftOf="@id/ageFieldHeader"/>


    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/age_short"
        android:textSize="24sp"
        android:textColor="#000000"
        android:id="@+id/ageFieldHeader"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"/>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#000000"-->
        <!--android:layout_below="@id/nameField"/>-->
</RelativeLayout>